src/objects/Ven_Vertrag_SevenVentures__c.object
<CustomObject>
    <fields>
        <fullName>Ven_Total_GMV__c</fullName>
        <description>Sum of GMV Year 1 to 3</description>
        <formula>Ven_GmvYear1__c +  Ven_GmvYear2__c  +  Ven_GmvYear3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of GMV Year 1 to 3</inlineHelpText>
        <label>Total GMV (without optional volume)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Total_GMVold__c</fullName>
        <label>Total GMV (without optional volume)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Valuation_Parameters__c</fullName>
        <defaultValue>&quot;Bewertungsparameter - Multiple (wovon, in welcher Höhe, zu welchem Zeitpunkt)&quot;</defaultValue>
        <description>Vertragsfeld für SevenVentures.</description>
        <inlineHelpText>Bitte die Bewertungsparameter eintragen.</inlineHelpText>
        <label>Valuation Parameters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Vertragsgebiet__c</fullName>
        <description>Hier wird das Vertragsgebiet für einen Vertrag für Seven Ventures eingetragen.</description>
        <inlineHelpText>Bitte Informationen zum Vertragsgebiet angeben!</inlineHelpText>
        <label>Vertragsgebiet</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Vertragskommentar__c</fullName>
        <defaultValue>&quot;Zusätzliche Information&quot;</defaultValue>
        <description>Hier werden Kommentare zu einem Vertrag von Seven Ventures erfasst.</description>
        <inlineHelpText>Bitte Kommentare zum Vertrag eintragen.</inlineHelpText>
        <label>Comment</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Vertragssprache__c</fullName>
        <description>Hier wird die Vertragssprache angegeben.</description>
        <inlineHelpText>Bitte die Vertragssprache angeben!</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>German</fullName>
                    <default>true</default>
                    <label>German</label>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Yearly_GMV_Commitment_Customer__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Yearly GMV Commitment</description>
        <label>Yearly GMV Commitment (Customer)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Yearly_GMV_Commitment_SevenVentures__c</fullName>
        <description>kann vermutlich gelöscht werden (KV 2351) --- Vertragsfeld für SevenVentures.</description>
        <label>Yearly GMV Commitment (SevenVentures)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Vertrag (Sevenventures)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ven_Deal_Type__c</columns>
        <columns>Ven_Opportunity__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>VenV-{00000000}</displayFormat>
        <label>Vertrag (SevenVentures)-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verträge (Sevenventures)</pluralLabel>
    <recordTypes>
        <fullName>Ven_Default</fullName>
        <active>true</active>
        <description>Datensatztyp für SevenVentures</description>
        <label>Ventures Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ven_Old</fullName>
        <active>true</active>
        <description>wieder erstellt, da TestCode Crash</description>
        <label>Medialeistungsvertrag (inkl. EP Light)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ven_DealStructureOtherMustNotBeEmpty</fullName>
        <active>true</active>
        <description>Wenn bei der Picklist Deal Structure &quot;Other&quot; ausgewählt ist, darf das Textfeld Deal Structure Other nicht leer sein.</description>
        <errorConditionFormula>ISPICKVAL(Ven_DealStructure__c, &apos;Other&apos;)
&amp;&amp;
ISBLANK(Ven_DealStructureOther__c)</errorConditionFormula>
        <errorDisplayField>Ven_DealStructureOther__c</errorDisplayField>
        <errorMessage>If Deal Structure is set to &quot;Other&quot;, Deal Structure Other must not be empty.</errorMessage>
    </validationRules>
</CustomObject>